--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/tiago-mattos/dojo-cy#readme",
   "dependencies": {
     "cypress": "^10.7.0",
-    "faker-br": "^0.4.1"
+    "faker-br": "^0.4.1",
+    "lorem-ipsum": "^2.0.8"
+  },
+  "devDependencies": {
+    "@deploysentinel/cypress-recorder": "^0.1.0"
   }
 }
